SSG-3093: Gateway software install now defaults to max permgen size of 128M.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@24104 219f1c6e-4a0e-43c8-96f2-6e749be13fd4